# stellabill-contracts

./: .gitignore  Cargo.toml  err.txt
contracts/subscription_vault/: Cargo.toml
contracts/subscription_vault/src/: admin.rs  charge_core.rs  lib.rs  merchant.rs  queries.rs  safe_math.rs  state_machine.rs  subscription.rs  test.rs  types.rs
contracts/subscription_vault/test_snapshots/test/: test_admin_cannot_be_rotated_by_previous_admin.1.json  test_admin_rotation_access_control_comprehensive.1.json  test_admin_rotation_affects_recovery_operations.1.json  test_admin_rotation_does_not_affect_subscriptions.1.json  test_admin_rotation_event_emission.1.json  test_admin_rotation_with_subscriptions_active.1.json  test_all_admin_operations_after_rotation.1.json  test_all_valid_transitions_coverage.1.json  test_all_valid_transitions_coverage.3.json  test_all_valid_transitions_coverage.4.json  test_all_valid_transitions_coverage.5.json  test_all_valid_transitions_coverage.6.json  test_all_valid_transitions_coverage.7.json  test_cancel_already_cancelled.1.json  test_cancel_subscription_emits_event.1.json  test_cancel_subscription_from_cancelled_is_idempotent.1.json  test_cancel_subscription_from_cancelled_should_fail.1.json  test_cancel_subscription_from_paused.1.json  test_charge_insufficient_balance.1.json  test_charge_subscription_admin.1.json  test_charge_subscription_auth.1.json  test_charge_subscription_credits_shared_merchant_balance_multiple_subscribers.1.json  test_charge_subscription_emits_event.1.json  test_charge_subscription_unauthorized.1.json  test_get_admin.1.json  (+89 more)
(+30 files in other folders)
